<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LocationActivity">


    <ImageView
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="423dp"
        android:layout_height="980dp"
        android:layout_marginTop="88dp"
        android:src="@drawable/geometric_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A21444"
        android:backgroundTintMode="add"
        android:text="@string/find_my_location"
        android:textAlignment="center"
        android:textColor="#A21444"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/TextViewLocation"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/TextViewLocation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/TextViewLocation"
        android:layout_width="144dp"
        android:layout_height="79dp"
        android:text="@string/your_location"
        android:textAlignment="center"
        android:textColor="#A21444"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

    <Button
        android:id="@+id/addParcelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A21444"
        android:backgroundTintMode="add"
        android:text="@string/Add_parcel"
        android:textColor="#A21444"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

</androidx.constraintlayout.widget.ConstraintLayout>